tests/miniJava/neg/000171_mutation.MiniJava
class java { public static { } Main ( String [ ] java ) { { } } }
